[package]

name = "capnp-rpc"
version = "0.6.2"
authors = [ "David Renshaw <dwrenshaw@sandstorm.io>" ]
build = "build.rs"
license = "MIT"
description = "implementation of the Cap'n Proto remote procedure call protocol"
repository = "https://github.com/dwrensha/capnp-rpc-rust"
documentation = "http://docs.capnproto-rust.org/capnp_rpc/"

[lib]

name = "capnp_rpc"
path = "src/lib.rs"

[build-dependencies.capnpc]
path = "https://github.com/dcrankshaw/capnpc-rust"

# [dependencies]
# gj = "0.1"
# capnp = {version = "0.6.1", features = ["rpc"]}
# capnp-gj = "0.1"


[dependencies.capnp]
features = ["rpc"]
git = "https://github.com/dcrankshaw/capnproto-rust"

[dependencies.gj]
git = "https://github.com/dcrankshaw/gj"

[dependencies.capnp-gj]
git = "https://github.com/dcrankshaw/capnp-gj"



